maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:19: error: expected class or object definition
def keepHandOnSideWall(){
^PledgeMaze:29: error: expected class or object definition
def isDirectionFree(dir : Direction) : Boolean = {
^PledgeMaze:41: error: expected class or object definition
def longe(){
^PledgeMaze:47: error: Unmatched closing brace '}' ignored here
}
^